--- a/Dev.Blog/Pages/Shared/_Layout.cshtml
+++ b/Dev.Blog/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="blog-background">
