--- a/Dev.Blog/wwwroot/css/site.css
+++ b/Dev.Blog/wwwroot/css/site.css
@@ -8,3 +8,8 @@
     background-color: var(--blog-background);
     color: var(--blog-on-background);
 }
+
+.blog-profile-background {
+    background: url(../images/PolyBackground.png);
+    background-size: cover;
+}
