--- a/Blazor.Dev.Blog/Components/ProfileCard.razor
+++ b/Blazor.Dev.Blog/Components/ProfileCard.razor
@@ -5,9 +5,9 @@
     <div class="card bg-dark shadow-sm w-100 h-100">
         @if (profile != null)
         {
-            <div class="card-img-top d-flex align-items-center justify-content-center blog-profile-background">
+            <div class="card-img-top d-flex align-items-center justify-content-center blog-geometric-background">
                 <div class="m-2 m-xl-3 p-2 p-xl-3 bg-dark shadow rounded-circle">
-                    <img src="@ProfileService.GetImagePath(profile)" class="shadow rounded-circle xl" />
+                    <img src="@ProfileService.GetImagePath(profile)" class="shadow rounded-circle" />
                 </div>
             </div>
         }
