--- a/Blazor.Dev.Blog/Shared/MainLayout.razor
+++ b/Blazor.Dev.Blog/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">WAIWO</a>
+                        <a class="nav-link" href="#">Latest</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
