Added Category Component
Added the category component to the index, and added a broswer for the current category to the view post page.

--- a/Blazor.Dev.Blog/Components/LatestUpdateCard.razor
+++ b/Blazor.Dev.Blog/Components/LatestUpdateCard.razor
@@ -61,9 +61,7 @@
     {
         if (firstRender)
         {
-            await Task.Delay(1200); //Look busy
-
-            post = await PostService.GetPost(PostNaturalID);
+            post = await PostService.GetPostAsync(PostNaturalID);
             category = await CategoryService.GetCategoryForPost(post);
 
             StateHasChanged();
