--- a/Blazor.Dev.Blog/wwwroot/css/site.css
+++ b/Blazor.Dev.Blog/wwwroot/css/site.css
@@ -2,6 +2,8 @@
 :root {
     --blog-background: #212529;
     --blog-on-background: #ffffff;
+    --blog-mid-background: #292E33;
+    --blog-on-mid-background: #ffffff;
 }
 
 .blog-background {
@@ -9,8 +11,18 @@
     color: var(--blog-on-background);
 }
 
+.blog-mid-background {
+    background-color: var(--blog-mid-background);
+    color: var(--blog-on-mid-background);
+}
+
 .blog-geometric-background {
     background: url(../images/PolyBackground.png);
+    background-size: cover;
+}
+
+.blog-geometric-background-gray {
+    background: url(../images/PolyBackgroundGray.png);
     background-size: cover;
 }
 
