Adding the first real post
Added a post about why I created the blog. It's in a new category jsut for posts about the creation of the dev blog. I intend to put some more in there soon about the construction process, and then one about the search function if i ever end up creating that.

--- a/Blazor.Dev.Blog/Components/CategoryCard.razor
+++ b/Blazor.Dev.Blog/Components/CategoryCard.razor
@@ -16,7 +16,7 @@
             }
             else
             {
-                <img class="card-img" height="256" src="@CategoryService.GetImagePath(category)" />
+                <img class="card-img blog-category-img" height="256" src="@CategoryService.GetImagePath(category)"/>
 
                 <div class="card-body d-flex flex-column">
                     <h3>@category.Name</h3>
