--- a/Blazor.Dev.Blog/Pages/Index.razor
+++ b/Blazor.Dev.Blog/Pages/Index.razor
@@ -10,7 +10,7 @@
             <Blazor.Dev.Blog.Components.ProfileCard ProfileJsonPath="CameronTaylor.json" />
         </div>
         <div class="col-md-8 d-flex align-items-stretch py-3 py-xl-4">
-            <Blazor.Dev.Blog.Components.LatestUpdateCard PostNaturalID="MakingTheMannor" />
+            <Blazor.Dev.Blog.Components.LatestUpdateCard />
         </div>
     </div>
 
