--- a/Blazor.Dev.Blog/Pages/PostView.razor
+++ b/Blazor.Dev.Blog/Pages/PostView.razor
@@ -31,15 +31,11 @@
 
                 <div class="col-xl-9 col-lg-8">
                     <div class="row mx-auto my-3 mb-1 bg-dark rounded py-3">
-                        <div class="col-3 col-xl-2 h-auto">
-                            <div class="rounded shadow h-100" style="background-image:url(@SwitchUrl(CategoryService.GetImagePath(category))); background-size: cover; background-position: center;" />
-                        </div>
-
-                        <div class="col-7 col-md-7 col-xl-8 col-xl-9 my-auto">
+                        <div class="col-8 col-md-9 col-xl-10 my-auto">
                             <h3>@category.Name</h3>
                         </div>
 
-                        <div class="col-2 col-xl-1 h-auto">
+                        <div class="col-4 col-md-3 col-xl-2 h-auto">
                             <a href="@category.Github" target="_blank" class="btn btn-success h-100 d-flex justify-content-center">
                                 <i class="h3 my-auto fab fa-github-square"></i>
                             </a>
