Started the Blazor post
Started a post about Blazor, created the picture, and the post json. Haven't written anything yet.

--- a/Blazor.Dev.Blog/Components/CategoryBrowserCard.razor
+++ b/Blazor.Dev.Blog/Components/CategoryBrowserCard.razor
@@ -58,7 +58,7 @@
         {
             Post post = await PostService.GetPostAsync(PostNaturalID);
             posts = await PostService.GetAllPostsForCategory(post.CategoryNaturalID);
-            posts.OrderByDescending(post => post.CreationDateUTC);
+            posts = posts.OrderBy(post => post.CreationDateUTC);
 
             StateHasChanged();
         }
