--- a/Blazor.Dev.Blog/Components/LatestUpdateCard.razor
+++ b/Blazor.Dev.Blog/Components/LatestUpdateCard.razor
@@ -3,7 +3,7 @@
 @inject PostService PostService;
 @inject CategoryService CategoryService;
 
-    <div class="card w-100 h-100 bg-dark" style="background: url(@SwitchURL(PostService.GetImagePath(post))); background-size: cover; background-position: center">
+    <div class="card w-100 h-100 bg-dark" style="background: url(@SwitchURL(PostService.GetImagePath(post))); background-size: cover;">
         <div class="card-body row no-gutters justify-content-end p-0 rounded-right blog-latest-update-card-content">
             @if (post == null || category == null)
             {
