--- a/Blazor.Dev.Blog/Components/CategoryCard.razor
+++ b/Blazor.Dev.Blog/Components/CategoryCard.razor
@@ -39,7 +39,7 @@
 
                     <div class="row">
                         <div class="col-9">
-                            <a href="post/category/@category.CategoryNaturalID" class="btn btn-primary h-100 w-100">
+                            <a href="search/category/@category.CategoryNaturalID" class="btn btn-primary h-100 w-100">
                                 Browse Project
                             </a>
                         </div>
