Added Lucene Post
Finished up the Search post, and added the Lucene post. Reindexed.

--- a/Blazor.Dev.Blog/Pages/PostView.razor
+++ b/Blazor.Dev.Blog/Pages/PostView.razor
@@ -60,7 +60,7 @@
                         </div>
                     </div>
 
-                    <div class="row mx-auto p-3 mb-6 rounded-bottom bg-dark">
+                    <div class="row mx-auto p-3 mb-6 rounded-bottom bg-dark d-block">
                         @((MarkupString)postBody)
                     </div>
                 </div>
