--- a/Blazor.Dev.Blog/Pages/SearchResults.razor
+++ b/Blazor.Dev.Blog/Pages/SearchResults.razor
@@ -44,7 +44,7 @@
                         {
                             @foreach(string postNaturalID in postNaturalIDs)
                             {
-                                <div class="row my-3 mx-auto">
+                                <div class="row my-3 mx-auto" style="height:450px;">
                                     <Blazor.Dev.Blog.Components.PostPreviewCard PostNaturalID="@postNaturalID" />
                                 </div>
                             }
