Fixed a couple bugs
Fixed a couple bugs and published the site to azure.

--- a/Blazor.Dev.Blog/Pages/Index.razor
+++ b/Blazor.Dev.Blog/Pages/Index.razor
@@ -28,7 +28,7 @@
     </div>
 
     <div class="row mb-5">
-        <div class="col-md-12 shadow">
+        <div class="col-md-12">
             <div class="container">
                 <div class="row rounded-top blog-geometric-background-gray p-3 shadow">
                     <h3>Projects</h3>
